--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Нови адреси се генерират всеки път, когато използвате този, но и предишните продължават да работят",
   "email_address": "Имейл адрес",
   "enable": "Активиране",
+  "enable_auto_node_switching": "Активиране на автоматично превключване на възли",
   "enable_builtin_tor": "Активирайте вграден Tor",
+  "enable_for_auto_switching": "Активирайте за автоматично превключване",
   "enable_mempool_api": "Mempool API за точни такси и дати",
   "enable_replace_by_fee": "Активиране на замяна по забрана",
   "enable_silent_payments_scanning": "Започнете да сканирате безшумните плащания, докато се достигне съветът",
