--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Po každém použití je generována nová adresa, ale předchozí adresy také stále fungují",
   "email_address": "E-mailová adresa",
   "enable": "Umožnit",
+  "enable_auto_node_switching": "Povolit automatické přepínání uzlů",
   "enable_builtin_tor": "Povolte vestavěné tor",
+  "enable_for_auto_switching": "Povolit automatické přepínání",
   "enable_mempool_api": "Mempool API pro přesné poplatky a data",
   "enable_replace_by_fee": "Povolit výměnu podle poplatku",
   "enable_silent_payments_scanning": "Začněte skenovat tiché platby, dokud není dosaženo špičky",
