--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Nous générons de nouvelles adresses à chaque fois que vous en utilisez une, mais les adresses précédentes continuent à fonctionner",
   "email_address": "Adresse e-mail",
   "enable": "Activer",
+  "enable_auto_node_switching": "Activer la commutation automatique du nœud",
   "enable_builtin_tor": "Activer le Tor construit",
+  "enable_for_auto_switching": "Activer pour le commutation automatique",
   "enable_mempool_api": "API Mempool pour les frais et dates précis",
   "enable_replace_by_fee": "Activer Remplace-by-Fee",
   "enable_silent_payments_scanning": "Commencez à analyser les transactions envoyées à votre adresse de paiement silencieux.",
