--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "हर बार जब आप एक का उपयोग करते हैं तो हम नए पते उत्पन्न करते हैं, लेकिन पिछले पते काम करना जारी रखते हैं",
   "email_address": "ईमेल पता",
   "enable": "सक्षम",
+  "enable_auto_node_switching": "स्वचालित नोड स्विचिंग सक्षम करें",
   "enable_builtin_tor": "बिल्ट-इन टोर को सक्षम करें",
+  "enable_for_auto_switching": "ऑटो-स्विचिंग के लिए सक्षम करें",
   "enable_mempool_api": "सटीक शुल्क और तिथियों के लिए मेमपूल एपीआई",
   "enable_replace_by_fee": "प्रतिस्थापित-दर-शुल्क सक्षम करें",
   "enable_silent_payments_scanning": "मूक भुगतान स्कैनिंग सक्षम करें",
