--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Minden egyes alkalommal új címeket generálunk, de a korábbi címek továbbra is működnek",
   "email_address": "Adresa e-pošte",
   "enable": "Omogućiti",
+  "enable_auto_node_switching": "Omogući automatsko prebacivanje čvorova",
   "enable_builtin_tor": "Omogućite ugrađeni u tor",
+  "enable_for_auto_switching": "Omogućite automatsko prebacivanje",
   "enable_mempool_api": "Mempool API za točne naknade i datume",
   "enable_replace_by_fee": "Omogući zamjenu",
   "enable_silent_payments_scanning": "Započnite skeniranje tihih plaćanja, dok se ne postigne savjet",
