--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Kami menghasilkan alamat baru setiap kali Anda menggunakan satu, tetapi alamat sebelumnya tetap berfungsi",
   "email_address": "Alamat Email",
   "enable": "Memungkinkan",
+  "enable_auto_node_switching": "Aktifkan switching simpul otomatis",
   "enable_builtin_tor": "Aktifkan built-in tor",
+  "enable_for_auto_switching": "Aktifkan untuk pengalihan otomatis",
   "enable_mempool_api": "API Mempool untuk biaya dan tanggal yang akurat",
   "enable_replace_by_fee": "Aktifkan ganti-by-fee",
   "enable_silent_payments_scanning": "Mulailah memindai pembayaran diam, sampai ujung tercapai",
