--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "使用するたびに新しいアドレスが生成されますが、以前のアドレスは引き続き機能します",
   "email_address": "メールアドレス",
   "enable": "有効にする",
+  "enable_auto_node_switching": "自動ノードスイッチングを有効にします",
   "enable_builtin_tor": "組み込みのTORを有効にします",
+  "enable_for_auto_switching": "自動スイッチを有効にします",
   "enable_mempool_api": "正確な料金と日付のMempool API",
   "enable_replace_by_fee": "交換ごとに有効にします",
   "enable_silent_payments_scanning": "先端に達するまで、サイレント決済のスキャンを開始します",
