--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "사용할 때마다 새 주소를 생성하지만 이전 주소도 계속 작동합니다",
   "email_address": "이메일 주소",
   "enable": "활성화",
+  "enable_auto_node_switching": "자동 노드 스위칭을 활성화합니다",
   "enable_builtin_tor": "내장 Tor를 활성화하십시오",
+  "enable_for_auto_switching": "자동 전환을 가능하게합니다",
   "enable_mempool_api": "정확한 수수료 및 날짜를 위한 Mempool API",
   "enable_replace_by_fee": "RBF(Replace-By-Fee) 활성화",
   "enable_silent_payments_scanning": "사일런트 페이먼트 주소로 전송된 트랜잭션 스캔 시작",
