--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "သင်အသုံးပြုသည့်အချိန်တိုင်းတွင် ကျွန်ုပ်တို့သည် လိပ်စာအသစ်များကို ထုတ်ပေးသော်လည်း ယခင်လိပ်စာများသည် ဆက်လက်အလုပ်လုပ်နေပါသည်။",
   "email_address": "အီးမေးလ်လိပ်စာ",
   "enable": "စွမ်းဆောင်နိုင်စေ",
+  "enable_auto_node_switching": "အလိုအလျောက် node switching ကို enable",
   "enable_builtin_tor": "built-in Tor ကို Enable လုပ်ပါ",
+  "enable_for_auto_switching": "Auto-switching အတွက်ဖွင့်ပါ",
   "enable_mempool_api": "Mempool API တိကျသောအခကြေးငွေနှင့်ရက်စွဲများအတွက်",
   "enable_replace_by_fee": "အစားထိုး - by- အခကြေးငွေ enable",
   "enable_silent_payments_scanning": "အစွန်အဖျားသို့ရောက်ရှိသည်အထိအသံတိတ်ငွေပေးချေမှုကိုစကင်ဖတ်စစ်ဆေးပါ",
