--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "We genereren nieuwe adressen elke keer dat u er een gebruikt, maar eerdere adressen blijven werken",
   "email_address": "E-mailadres",
   "enable": "Inschakelen",
+  "enable_auto_node_switching": "Schakel automatische knoopschakeling in",
   "enable_builtin_tor": "Schakel ingebouwde tor in",
+  "enable_for_auto_switching": "Inschakelen voor automatisch schakelen",
   "enable_mempool_api": "Mempool API voor nauwkeurige kosten en datums",
   "enable_replace_by_fee": "Schakel vervangen door een fee",
   "enable_silent_payments_scanning": "Begin met het scannen van stille betalingen, totdat de tip is bereikt",
