--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Za każdym razem, gdy wykorzystasz adres, dla wiekszej prywatności generujemy nowy, ale poprzednie adresy nadal działają, i moga odbierać środki",
   "email_address": "Adres e-mail",
   "enable": "Włącz",
+  "enable_auto_node_switching": "Włącz automatyczne przełączanie węzłów",
   "enable_builtin_tor": "Włącz wbudowany tor",
+  "enable_for_auto_switching": "Włącz do automatycznego przełączania",
   "enable_mempool_api": "Mempool API dla dokładnych opłat i dat",
   "enable_replace_by_fee": "Włącz wymianę po lewej",
   "enable_silent_payments_scanning": "Zacznij skanować Silent Payments",
