--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Geramos novos endereços cada vez que você usa um, mas os endereços anteriores continuam funcionando",
   "email_address": "Endereço de e-mail",
   "enable": "Habilitar",
+  "enable_auto_node_switching": "Ativar comutação automática de nó",
   "enable_builtin_tor": "Ative o Buildi-in Tor",
+  "enable_for_auto_switching": "Ativar a troca automática",
   "enable_mempool_api": "Mempool API para taxas e datas precisas",
   "enable_replace_by_fee": "Habilite substituir por taxa",
   "enable_silent_payments_scanning": "Comece a escanear pagamentos silenciosos, até que o topo seja alcançada",
