--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Мы генерируем новые адреса каждый раз, когда вы их используете, но предыдущие адреса продолжают работать.",
   "email_address": "Адрес электронной почты",
   "enable": "Давать возможность",
+  "enable_auto_node_switching": "Включить автоматическое переключение узлов",
   "enable_builtin_tor": "Включить встроенный в Tor",
+  "enable_for_auto_switching": "Включить для автоматического переключения",
   "enable_mempool_api": "Mempool API за точные сборы и даты",
   "enable_replace_by_fee": "Включить замену за пикой",
   "enable_silent_payments_scanning": "Начните сканировать безмолвные платежи, пока не будет достигнут наконечник",
