--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "เราสร้างที่อยู่ใหม่ทุกครั้งที่คุณใช้หนึ่งอย่าง แต่ที่อยู่เก่ายังสามารถใช้ได้ต่อไป",
   "email_address": "ที่อยู่อีเมล",
   "enable": "เปิดใช้งาน",
+  "enable_auto_node_switching": "เปิดใช้งานการสลับโหนดอัตโนมัติ",
   "enable_builtin_tor": "เปิดใช้งาน Tor ในตัว",
+  "enable_for_auto_switching": "เปิดใช้งานการสลับอัตโนมัติ",
   "enable_mempool_api": "Mempool API สำหรับค่าธรรมเนียมและวันที่ที่ถูกต้อง",
   "enable_replace_by_fee": "เปิดใช้งานการเปลี่ยนโดยค่าธรรมเนียม",
   "enable_silent_payments_scanning": "เริ่มสแกนการชำระเงินแบบเงียบจนกว่าจะถึงปลาย",
