--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Bumubuo kami ng mga bagong address sa tuwing gagamit ka ng isa, ngunit ang mga nakaraang address ay patuloy na gumagana",
   "email_address": "Email Address",
   "enable": "Paganahin",
+  "enable_auto_node_switching": "Paganahin ang awtomatikong paglipat ng node",
   "enable_builtin_tor": "Paganahin ang built-in tor",
+  "enable_for_auto_switching": "Paganahin para sa auto-switch",
   "enable_mempool_api": "Mempool API para sa tumpak na bayad at mga petsa",
   "enable_replace_by_fee": "Paganahin ang  Replace-By-Fee",
   "enable_silent_payments_scanning": "Simulan ang pag -scan ng tahimik na pagbabayad, hanggang sa maabot ang tip",
