--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Adresini her kullandığında yeni adres oluşturuyoruz, ancak önceki adresler de çalışmaya devam eder",
   "email_address": "E-posta Adresi",
   "enable": "Olanak vermek",
+  "enable_auto_node_switching": "Otomatik Düğüm Anahtarlamasını Etkinleştir",
   "enable_builtin_tor": "Yerleşik Tor'u etkinleştirin",
+  "enable_for_auto_switching": "Otomatik anahtarlama için etkinleştirin",
   "enable_mempool_api": "Doğru ücretler ve tarihler için Mempool API'si",
   "enable_replace_by_fee": "Farklı Değiştir'i Etkinleştir",
   "enable_silent_payments_scanning": "Bahşiş ulaşılıncaya kadar sessiz ödemeleri taramaya başlayın",
