--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Ми створюємо нові адреси щоразу, коли ви використовуєте їх, але попередні адреси продовжують працювати",
   "email_address": "Адреса електронної пошти",
   "enable": "Ввімкнути",
+  "enable_auto_node_switching": "Увімкнути автоматичний перемикач вузлів",
   "enable_builtin_tor": "Увімкнути вбудований tor",
+  "enable_for_auto_switching": "Увімкнути автоматичне перемикання",
   "enable_mempool_api": "API Mempool для точних зборів та дат",
   "enable_replace_by_fee": "Увімкнути заміну з комісією",
   "enable_silent_payments_scanning": "Почніть сканувати мовчазні платежі, поки не буде досягнуто наконечника",
