--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "جب بھی آپ ایک کا استعمال کرتے ہیں تو ہم نئے پتے تیار کرتے ہیں، لیکن پچھلے پتے کام کرتے رہتے ہیں۔",
   "email_address": "ای میل اڈریس",
   "enable": "قابل بنائیں",
+  "enable_auto_node_switching": "خودکار نوڈ سوئچنگ کو فعال کریں",
   "enable_builtin_tor": "بلٹٹی ان ٹور کو فعال کریں",
+  "enable_for_auto_switching": "آٹو سوئچنگ کے لئے قابل بنائیں",
   "enable_mempool_api": "درست فیسوں اور تاریخوں کے لئے میمپول API",
   "enable_replace_by_fee": "فی فیس کو تبدیل کریں",
   "enable_silent_payments_scanning": "خاموش ادائیگیوں کو اسکین کرنا شروع کریں ، جب تک کہ نوک نہ پہنچ جائے",
