--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -305,7 +305,9 @@
   "electrum_address_disclaimer": "Chúng tôi tạo địa chỉ mới mỗi khi bạn sử dụng, nhưng các địa chỉ cũ vẫn tiếp tục hoạt động",
   "email_address": "Địa chỉ Email",
   "enable": "Cho phép",
+  "enable_auto_node_switching": "Bật chuyển đổi nút tự động",
   "enable_builtin_tor": "Bật Buildi-In Tor",
+  "enable_for_auto_switching": "Kích hoạt để chuyển đổi tự động",
   "enable_mempool_api": "API Mempool cho các khoản phí và ngày chính xác",
   "enable_replace_by_fee": "Bật Thay thế Bằng Phí",
   "enable_silent_payments_scanning": "Bật quét thanh toán im lặng",
