--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "每次您使用一个地址时，我们都会生成新地址，但之前的地址仍然有效",
   "email_address": "电子邮件地址",
   "enable": "使能够",
+  "enable_auto_node_switching": "启用自动节点开关",
   "enable_builtin_tor": "启用内置的tor",
+  "enable_for_auto_switching": "启用自动开关",
   "enable_mempool_api": "Mempool API获得准确的费用和日期",
   "enable_replace_by_fee": "启用by-Fee替换",
   "enable_silent_payments_scanning": "开始扫描无声付款，直到达到提示",
