--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Wir generieren jedes Mal neue Adressen, wenn Sie eine verwenden, aber vorherige Adressen funktionieren weiterhin",
   "email_address": "E-Mail-Adresse",
   "enable": "Aktivieren",
+  "enable_auto_node_switching": "Aktivieren Sie die automatische Knotenschaltung",
   "enable_builtin_tor": "Aktivieren Sie den bau-in tor",
+  "enable_for_auto_switching": "Aktivieren Sie die automatische Schaltung",
   "enable_mempool_api": "Mempool-API für genaue Gebühren und Daten",
   "enable_replace_by_fee": "Aktivieren Sie Ersatz für Fee",
   "enable_silent_payments_scanning": "Scannen Sie nach Silent Payments ihrer Adresse",
