--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Generamos nuevas direcciones cada vez que usa una, pero las direcciones anteriores siguen funcionando",
   "email_address": "Dirección de correo electrónico",
   "enable": "Permitir",
+  "enable_auto_node_switching": "Habilitar la conmutación de nodo automático",
   "enable_builtin_tor": "Habilitar Tor incorporado",
+  "enable_for_auto_switching": "Habilitar para el cambio automático",
   "enable_mempool_api": "API de Mempool para tarifas y fechas precisas",
   "enable_replace_by_fee": "Habilitar reemplazar por tarea",
   "enable_silent_payments_scanning": "Comienza a escanear pagos silenciosos, hasta que se alcance la altura actual",
