--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Muna samar da sababbin adireshi duk lokacin da kuka yi amfani da ɗaya, amma adiresoshin da suka gabata suna ci gaba da aiki",
   "email_address": "Adireshin i-mel",
   "enable": "Ba dama",
+  "enable_auto_node_switching": "Yana ba da damar kunna kumburi ta atomatik",
   "enable_builtin_tor": "Sanya riguna-inf",
+  "enable_for_auto_switching": "Kunna don sauyawa na atomatik",
   "enable_mempool_api": "Mampool API don ingantattun kudade da kwanakin",
   "enable_replace_by_fee": "Ba da damar maye gurbin-by-kudin",
   "enable_silent_payments_scanning": "Fara bincika biya na shiru, har sai tip ɗin ya kai",
