--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -306,7 +306,9 @@
   "electrum_address_disclaimer": "Մենք ստեղծում ենք նոր հասցե ամեն անգամ, երբ դուք օգտագործում եք այն, բայց նախորդ հասցեները շարունակում են աշխատել",
   "email_address": "Էլ. փոստի հասցե",
   "enable": "Միացնել",
+  "enable_auto_node_switching": "Միացնել ավտոմատ հանգույցի անջատումը",
   "enable_builtin_tor": "Միացրեք ներկառուցված ջահը",
+  "enable_for_auto_switching": "Միացնել ավտոմատ անջատումը",
   "enable_mempool_api": "Mempool API ճշգրիտ վճարների եւ ամսաթվերի համար",
   "enable_replace_by_fee": "Միացնել փոխարինումը միջնորդավճարով",
   "enable_silent_payments_scanning": "Միացնել Լուռ Վճարումների սկանավորումը",
