--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -307,7 +307,9 @@
   "electrum_address_disclaimer": "A dá àwọn àdírẹ́sì títun ní gbogbo àwọn ìgbà t'ẹ́ lo ó kan ṣùgbọ́n ẹ lè tẹ̀síwájú lo àwọn àdírẹ́sì tẹ́lẹ̀tẹ́lẹ̀.",
   "email_address": "Àdírẹ́sì ímeèlì",
   "enable": "Mu ṣiṣẹ",
+  "enable_auto_node_switching": "Mu oju-ọna yiyọ laifọwọyi",
   "enable_builtin_tor": "Mu ṣiṣẹ",
+  "enable_for_auto_switching": "Mu ṣiṣẹ fun adaṣe-pada",
   "enable_mempool_api": "Mempool API fun awọn owo deede ati awọn ọjọ",
   "enable_replace_by_fee": "Mu ki o rọpo",
   "enable_silent_payments_scanning": "Bẹrẹ awọn sisanwo ipalọlọ, titi ti o fi de opin",
